<resources>
    <string name="app_name">Android学习笔记</string>
    <!--主列表页面-->
    <string name="text_qa_summary_main">开发此应用时遇到的问题</string>
    <string name="text_qa_text_main">问题</string>
    <string name="text_view_summary_main">包括Activity和Fragment的学习</string>
    <string name="text_view_text_main">View</string>
    <string name="text_view_group_text_main">ViewGroup</string>
    <string name="text_widget_summary_main">Layout和Widget的学习</string>
    <string name="text_widget_text_main">Widget</string>
    <string name="text_launch_summary_main">App启动相关的学习</string>
    <string name="text_launch_text_main">应用启动</string>
    <string name="text_thread_summary_main">Android中线程的学习</string>
    <string name="text_thread_text_main">线程</string>
    <string name="text_animation_summary_main">Android中动画的学习</string>
    <string name="text_share_summary_main">添加应用到系统分享列表和调用系统分享</string>
    <string name="text_permission_summary_main">动态获取权限的适配</string>
    <string name="text_serialize_summary_main">Android中数据序列化的实践</string>
    <string name="text_image_summary_main">获取图片、图片缓存demo</string>
    <string name="text_sqlite_summary_main">数据库的使用</string>
    <string name="text_animation_text_main">动画</string>
    <string name="text_share_text_main">分享</string>
    <string name="text_permission_text_main">权限</string>
    <string name="text_serialize_text_main">序列化</string>
    <string name="text_serialize_text_image">图片</string>
    <string name="text_serialize_text_sqlite">数据库的使用</string>
    <string name="text_kotlin_exercise_main">Kotlin</string>
    <string name="text_kotlin_exercise_summary">Kotlin语言的使用练习</string>
    <string name="text_barrage_text_main">弹幕练习</string>
    <string name="text_barrage_summary_main">日！SB运营</string>
    <!--QA页面-->
    <string name="text_summary_qa">记录开发此应用过程中的一些疑问</string>
    <string name="text_no_get_activity_qa">为什么继承自AppCompatActivity没有getActivity()方法？</string>
    <!--Widget页面-->
    <string name="text_widget_textview">TextView</string>
    <string name="text_widget_surfaceview">SurfaceView</string>
    <string name="text_widget_toolbar">ToolBar</string>
    <string name="text_widget_constraintLayout">ConstraintLayout</string>
    <!--ToolBar页面-->
    <string name="text_action_favorite">favorite</string>
    <string name="text_action_settings">settings</string>
    <string name="text_action_search">search</string>
    <string name="text_action_share">share</string>
    <!--Thread页面-->
    <string name="text_jump_thread">跳转到线程</string>
    <string name="text_jump_async">跳转到异步</string>
    <!--Permission页面-->
    <string name="text_permission_summary">该页面展示在Android 6.0以上平台上应用获取运行时权限的最佳实践，点击任意按钮获取权限</string>
    <string name="text_permission_get_camera">点击获取相机权限</string>
    <string name="text_permission_get_location">点击获取定位权限</string>
    <string name="text_permission_get_contacts">点击获取通讯录权限</string>
    <string name="text_permission_get_storage">点击获取内部存储权限</string>
    <string name="text_permission_get_all">点击获取全部权限</string>
    <!--TextView页面-->
    <string name="text_view_knowledge_item_0">getTextSize()和setTextSize()</string>
    <string name="text_view_knowledge_item_1">伪弹幕的实现</string>
    <string name="text_view_knowledge_item_2">跑马灯效果实现</string>
    <string name="text_view_knowledge_item_3">阴影效果实现</string>
    <string name="text_view_knowledge_item_4">html超链接</string>
    <!--TextViewDetail页面-->
    <string name="text_view_detail_content_0">该页面的代码展示了对setText设置不同值时的效果</string>
    <string name="text_view_detail_content_1">该页面的代码展示了对TextView设置跑马灯效果的正确方式和不同场景</string>
    <string name="text_view_detail_content_2">该页面的代码展示了对TextView设置阴影效果</string>
    <string name="text_view_detail_content_3">该页面的代码展示了对TextView设置html超链接效果</string>
    <string name="text_view_detail_content_marquee_long">这段文本是一段长测试文本，测试TextView的跑马灯效果，探究打开这种效果的正确方式和方法</string>
    <string name="text_view_detail_content_marquee_short">这段文本是一段短测试文本</string>
    <string name="text_view_detail_content_shadow">这段文本是一段短测试文本</string>
    <string name="text_view_detail_content_html">这段文本是一段短测试文本</string>
    <!--View页面-->
    <string name="text_view_fragment">Fragment</string>
    <string name="text_view_activity">Activity</string>
    <string name="text_view_event">ViewClickEvent</string>
    <string name="text_view_custom">CustomView</string>
    <!--FragmentDemo页面-->
    <string name="text_fragment_demo_from_api_demo">ApiDemos中的Fragment示例：在布局中的fragment使用</string>
    <string name="text_fragment_demo_from_api_demo_back_stack">ApiDemos中的Fragment示例：Fragment后退栈</string>
    <string name="new_fragment">New fragment</string>
    <string name="hello_world"><b>Hello, <i>World!</i></b></string>
    <string name="broadcast_text">Broadcast</string>
</resources>
