<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.sean.zq.android.module.view.widget.toolbar.ToolBarActivity">
    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/text_action_search"
        app:showAsAction="ifRoom|collapseActionView"
        android:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/action_share"
        android:title="@string/text_action_share"
        app:showAsAction="ifRoom"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
    <item
        android:id="@+id/action_favorite"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/text_action_favorite"
        app:showAsAction="ifRoom"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:title="@string/text_action_settings"
          app:showAsAction="never"/>
</menu>